hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_returns_void_but_expect_struct.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type struct, got void",
                span: 1:26; [25, 28],
                level: Error,
            },
        ],
        inputs: (),
    },
)
