hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_wrong_early_return_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type number, got boolean",
                span: 1:36; [35, 40],
                level: Error,
            },
        ],
        inputs: (),
    },
)
