hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_wrong_return_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type boolean, got number",
                span: 1:28; [27, 29],
                level: Error,
            },
        ],
        inputs: (),
    },
)
