hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__function_wrong_return_type_2.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type boolean, got void",
                span: 1:20; [19, 22],
                level: Error,
            },
        ],
        inputs: (),
    },
)
